# OOP_Task4

./: CMakeLists.txt  Circle.cpp  MainTrain.cpp  Point.cpp  Quad.cpp  README.md  Shape.cpp  Square.cpp  allShapes.cpp
